<resources>
    <string name="app_name">Movies</string>
    <string name="movies">Movies</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="people">People</string>
    <string name="settings">Settings</string>
    <string name="search_box">Search people &amp; places</string>
    <string name="user_score">User Score</string>
    <string name="rate">Rate</string>
    <string name="overview">Overview</string>
    <string name="read_more">Read more</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="view_full_cast_and_crew">View Full Cast &amp; Crew</string>
    <string name="movie_facts">Movie Facts</string>
    <string name="status">Status</string>
    <string name="release_date">Release Date</string>
    <string name="original_language">Original Language</string>
    <string name="runtime">Runtime</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="rate_it">Rate It!</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="known_for">Known for</string>
    <string name="known_for_person">Known for: </string>
    <string name="view_all">View all</string>
    <string name="biography">Biography</string>
    <string name="gender">Gender</string>
    <string name="known_credits">Known Credits</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="account_settings">Account Settings</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_information">Sign in to access to movies information</string>
    <string name="sign_up_information">Sign up to access to movies information</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="not_name"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>