<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.movies.movies.DetailMovieViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/poster_movie"
                    android:layout_width="match_parent"
                    android:layout_height="375dp"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{viewModel.movie.posterPath}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/title_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@{viewModel.movie.title}"
                    android:textColor="@color/dark_blue_grey"
                    android:textSize="34sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/poster_movie" />

                <ImageButton
                    android:id="@+id/info_movie"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/transparent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_info_button"
                    app:layout_constraintBottom_toBottomOf="@+id/title_movie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/poster_movie"
                    app:tint="@color/dark_mint"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/user_score"
                    android:textColor="@color/dark_blue_grey"
                    android:textSize="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_movie" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/rate"
                    android:textColor="@color/dark_mint"
                    android:textSize="16dp"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/title_movie" />

                <TextView
                    android:id="@+id/user_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@{viewModel.movie.voteAverage.toString() + '%'}"
                    android:textColor="@color/dark_blue_grey"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/overview"
                    android:textColor="@color/dark_blue_grey"
                    android:textSize="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_score" />

                <TextView
                    android:id="@+id/overview_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="1dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto"
                    android:lines="3"
                    android:text="@{viewModel.movie.overview}"
                    android:textColor="@color/dark_blue_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/read_more_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/read_more"
                    android:textColor="@color/dark_mint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overview_movie" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/top_billed_cast"
                    android:textColor="@color/dark_blue_grey"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/read_more_movie" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/billed_cast_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/full_cast_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/view_full_cast_and_crew"
                    android:textColor="@color/dark_mint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/billed_cast_movie" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>